Fix submit button on mobile

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -87,7 +87,7 @@
     }
 
     .simple-button {
-        float: none;
+        float: left;
         display: block;
         font-size: 14px;
         max-width: 180px;
